fixed contact on smaller devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -60,16 +60,20 @@ input {
 .help-commands {
   display: grid;
   grid-template-columns: 1fr 5fr;
-  /* gap: 0.5rem; */
 }
 
 .help-command {
-  color: white; /* Color for commands */
+  color: white;
   padding-left: 2rem;
 }
 
 .help-description {
-  color: white; /* Color for descriptions */
+  color: white;
+}
+
+.contact-method {
+  color: white;
+  padding-left: 2rem;
 }
 
 @media (max-width: 576px) {
@@ -77,6 +81,11 @@ input {
     font-size: 9px;
   }
   .help-commands {
+    display: grid;
+    grid-template-columns: 1fr 1.3fr;
+    gap: 0.7rem;
+  }
+  .contact-info {
     display: grid;
     grid-template-columns: 1fr 1.3fr;
     gap: 0.7rem;
@@ -92,10 +101,20 @@ input {
     grid-template-columns: 1fr 1.5fr;
     gap: 0.5rem;
   }
+  .contact-info {
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
+    gap: 0.5rem;
+  }
 }
 
 @media (min-width: 768px) {
   .help-commands {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    gap: 0.3rem;
+  }
+  .contact-info {
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 0.3rem;
@@ -108,9 +127,13 @@ input {
     grid-template-columns: 1fr 4fr;
     gap: 0.1rem;
   }
-
   .help-command {
     color: white;
     padding-left: 2rem;
+  }
+  .contact-info {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    gap: 0.1rem;
   }
  }
